<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.meuprojeto.dm.activity.PoliticaPrivacidadeActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_como_funciona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_p1"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_laranja" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p2"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_p3"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_laranja" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p4"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView67"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p5"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView107"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p6"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView110"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p7"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p8"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p8"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView113"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_p9"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_laranja" />

            <TextView
                android:id="@+id/textView114"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p10"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p11"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView116"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p12"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView117"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p13"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView118"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p14"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView119"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p15"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView120"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p16"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_p17"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_laranja" />

            <TextView
                android:id="@+id/textView122"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p18"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_p19"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_laranja" />

            <TextView
                android:id="@+id/textView124"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p20"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView125"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p21"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView126"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/txt_p22"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_laranja" />

            <TextView
                android:id="@+id/textView127"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p23"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />

            <TextView
                android:id="@+id/textView128"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_p24"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/letras_roxo" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
