<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.meuprojeto.dm.activity.ConfirmacaoPedidoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_ola"
                    android:textColor="@color/letras_roxo"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_nome_usuario"
                    android:textColor="@color/letras_laranja" />
            </TableRow>

            <TextView
                android:id="@+id/textView62"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_compra_finalizada"
                android:textColor="@color/letras_roxo"
                android:textStyle="bold" />

            <View
                android:id="@+id/divider0"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvConfirmacaoPedido"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="?android:attr/listDivider" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView94"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_quant_itens"
                    android:textColor="@color/letras_roxo" />

                <TextView
                    android:id="@+id/tvQuantidadeTotalItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_quantidade"
                    android:textColor="@color/letras_roxo" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView96"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_valor_compra"
                    android:textColor="@color/letras_roxo" />

                <TextView
                    android:id="@+id/tvValorTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/txt_valor"
                    android:textColor="@color/letras_roxo" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="confirmacao"
                    android:text="@string/txt_ok"
                    android:textColor="@color/letras_roxo" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
