<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/divider0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvQuantidadeItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_quantidade"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/letras_roxo"
                app:fontFamily="@font/scada" />

            <TextView
                android:id="@+id/tvNomeItem"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_item1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/letras_roxo"
                app:fontFamily="@font/scada" />

            <TextView
                android:id="@+id/tvValorItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/txt_valor"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/letras_roxo"
                app:fontFamily="@font/scada" />

        </TableRow>
    </android.support.v7.widget.CardView>

</LinearLayout>
